--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^5.2.2",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "3.1.1"
+    "react-scripts": "3.1.1",
+    "three": "^0.146.0"
   },
   "scripts": {
     "start": "react-scripts start",
